--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css'
+import Header from '../components/Header.astro';
 ---
 <!doctype html>
 <html lang="en">
@@ -8,18 +9,18 @@ import '../styles/global.css'
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Vacunacion</title>
 	</head>
-	<body>
+	<body class="bg-white text-gray-800 font-sans">
+		<Header />
 		<slot />
 	</body>
 </html>
 
 <style>
-	html,
-	body {
+	* {
 		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+		padding: 0;
+		box-sizing: border-box;
+	  }
 </style>
