--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -1,12 +1,11 @@
 ---
-import { Image } from "astro:assets";
-import { imageConfig } from "astro:assets";
+const base = import.meta.env.BASE_URL;
 
 const images = [
-    {src:"/img/astrazeneca.png", alt:"AstraZeneca"},
-    {src:"/img/sinovac.png", alt:"Sinovac"},
-    {src:"/img/pfizer.png", alt:"Pfizer"},
-    {src:"/img/moderna.png", alt:"Moderna"}
+    {src:`${base}/img/astrazenca.png`, alt:"AstraZeneca"},
+    {src:`${base}/img/sinovac.png`, alt:"Sinovac"},
+    {src:`${base}/img/pfizer.png`, alt:"Pfizer"},
+    {src:`${base}/img/moderna.png`, alt:"Moderna"}
 ];
 ---
 <section class="w-full py-12 bg-white">
