--- a/src/components/Slider.astro
+++ b/src/components/Slider.astro
@@ -2,7 +2,7 @@
 const base = import.meta.env.BASE_URL;
 
 const images = [
-    {src:`${base}/img/astrazenca.png`, alt:"AstraZeneca"},
+    {src:`${base}/img/astrazeneca.png`, alt:"AstraZeneca"},
     {src:`${base}/img/sinovac.png`, alt:"Sinovac"},
     {src:`${base}/img/pfizer.png`, alt:"Pfizer"},
     {src:`${base}/img/moderna.png`, alt:"Moderna"}
