--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Slider from '../components/Slider.astro';
 ---
 
 <Layout>
-	</header>
-    </Hero>
-    <Slider/>
-    </About>
+	<Header />
+    <Hero />
+    <Slider />
+    <About />
 </Layout>
