--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -28,7 +28,7 @@ const base = import.meta.env.BASE_URL;
           </div>
           <div class="flex items-center gap-2">
             <img
-              src={`${base}/img/star.png"`}
+              src={`${base}/img/star.png`}
               alt="Star"
               class="w-6 rounded shadow-[3px_19px_36px_1px_rgba(240,201,147,0.72)]"
             />
@@ -40,7 +40,7 @@ const base = import.meta.env.BASE_URL;
 
         <div class="flex items-center mt-36 gap-2">
           <img
-            src={`${base}/img/clock.png"`}
+            src={`${base}/img/clock.png`}
             alt="Clock"
             class="w-6 rounded shadow-[-4px_11px_50px_0px_rgba(0,0,0,0.72)]"
           />
@@ -53,7 +53,7 @@ const base = import.meta.env.BASE_URL;
 
     <div class="flex-1 h-[140vh]">
       <img
-        src={`${base}/img/vaccine.jpg"`}
+        src={`${base}/img/vaccine.jpg`}
         alt="Vaccine"
         class="w-full h-full object-cover"
       />
@@ -70,17 +70,17 @@ const base = import.meta.env.BASE_URL;
       class="flex flex-col md:flex-row justify-between gap-4 flex-grow w-full"
     >
       <div class="flex items-center gap-2">
-        <img src={`${base}/img/location.png"`}alt="Location" class="w-6 rounded" />
+        <img src={`${base}/img/location.png`}alt="Location" class="w-6 rounded" />
         <span class="text-gray-700 font-semibold text-sm">Location</span>
         <p class="text-[#112778] font-semibold pl-2">Jakarta Utara</p>
       </div>
       <div class="flex items-center gap-2">
-        <img src={`${base}/img/calendar.png"`} alt="Calendar" class="w-6 rounded" />
+        <img src={`${base}/img/calendar.png`} alt="Calendar" class="w-6 rounded" />
         <span class="text-gray-700 font-semibold text-sm">Date</span>
         <p class="text-[#112778] font-semibold pl-2">8 July 2021</p>
       </div>
       <div class="flex items-center gap-2">
-        <img src={`${base}/img/vacuna.png"`} alt="Vaccine Type" class="w-6 rounded" />
+        <img src={`${base}/img/vacuna.png`} alt="Vaccine Type" class="w-6 rounded" />
         <span class="text-gray-700 font-semibold text-sm">Vaccine Type</span>
         <p class="text-[#112778] font-semibold pl-2">Moderna</p>
       </div>
