--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css'
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 ---
 <!doctype html>
 <html lang="en">
@@ -12,8 +13,12 @@ import Header from '../components/Header.astro';
 		<title>Vacunacion</title>
 	</head>
 	<body class="bg-white text-gray-800 font-sans">
-		<Header />
+		<header />
+		<main>
+			<Header />
 		<slot />
+		</main>
+		<Footer />
 	</body>
 </html>
 
