--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Header from '../components/Header.astro';
 import Hero from '../components/Hero.astro';
 import About from '../components/About.astro';
 import Slider from '../components/Slider.astro';
+import Service from '../components/Service.astro';
 ---
 
 <Layout>
@@ -11,4 +12,5 @@ import Slider from '../components/Slider.astro';
     <Hero />
     <Slider />
     <About />
+    <Service />
 </Layout>
